test-data/invalid/unclosed-subckt.cir
.subckt missing_end in out
R1 in out 1k
.end
